# nuxie-runtime

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  corpus-r.toml  corpus.toml  file-correspondence-manifest.toml  parity-scorecard.toml  port-manifest.toml
crates/nux-apple-runtime/: Cargo.toml  build.rs  cbindgen.toml
crates/nux-apple-runtime/include/: module.modulemap  nux_runtime.generated.h  nux_runtime.h
crates/nux-apple-runtime/smoke/: header_smoke.c  swift_import_smoke.swift
crates/nux-apple-runtime/src/: artifact.rs  lib.rs  session_v12.rs
crates/nux-apple-runtime/tests/: artifact_validator.rs
crates/nux-capi/: Cargo.toml  build.rs  cbindgen.toml
crates/nux-capi/include/: module.modulemap  nux_capi.generated.h  nux_capi.h
crates/nux-capi/smoke/: capi_smoke.c
crates/nux-capi/src/: lib.rs  render_callbacks.rs  size_report_roots.rs
crates/nux-capi/tests/: capi.rs
crates/nuxie/: Cargo.toml  build.rs
crates/nuxie-binary/: Cargo.toml
crates/nuxie-binary/src/: lib.rs
crates/nuxie-binary/tests/: authoring_records.rs  cpp_import.rs  fixtures.rs
crates/nuxie-graph/: Cargo.toml
crates/nuxie-graph/src/: lib.rs
crates/nuxie-graph/tests/: cpp_probe.rs
crates/nuxie-renderer/: Cargo.toml
crates/nuxie-renderer-ffi/: Cargo.toml  build.rs
crates/nuxie-renderer-ffi/cpp/: rive_renderer_ffi.cpp  rive_renderer_ffi.h  rive_renderer_ffi_dawn.cpp  rive_renderer_ffi_metal.mm  rive_renderer_ffi_private.hpp
crates/nuxie-renderer-ffi/examples/: ffi_metal_draw.rs  ffi_null_draw.rs
crates/nuxie-renderer-ffi/src/: lib.rs  native.rs
crates/nuxie-renderer-ffi/tests/: decode_oracle.rs
crates/nuxie-renderer/src/: advanced_composite.wgsl  atlas_blit_oracle.rs  atlas_input_oracle.rs  atlas_mask_oracle.rs  atlas_pipeline.rs  atlas_placement_oracle.rs  atomic_pipeline.rs  browser.rs  clockwise_atomic_pipeline.rs  composite.wgsl  composite_pipeline.rs  direct_grid_oracle.rs  draw.rs  feather_lut.rs  gpu.rs  gpu_canvas.rs  gr_triangulator.rs  gradient_pipeline.rs  intersection_board.rs  lib.rs  logical_flush.rs  mipmap_pipeline.rs  msaa_atlas_pipeline.rs  msaa_image_mesh_pipeline.rs  msaa_stencil_pipeline.rs  path_pipeline.rs  skyline.rs  solid.wgsl  storage_texture.rs  surface.rs  surface_present.wgsl  tess_span_oracle.rs  tessellator.rs  webgl2.rs  webgl2_limits.rs  work_metrics.rs
crates/nuxie-runtime/: Cargo.toml  build.rs
crates/nuxie-runtime/src/: animation.rs  artboard.rs  artboard_data_bind.rs  components.rs  constraints.rs  data_bind_graph.rs  draw.rs  focus.rs  lib.rs  objects.rs  project_data_converter.rs  properties.rs  retained_data_bind.rs  scripting.rs  state_machine.rs  text.rs  view_model.rs  view_model_cell.rs
crates/nuxie-runtime/src/state_machine/: bindables.rs  instance.rs  transition_conditions.rs
crates/nuxie-runtime/tests/: cpp_probe.rs  project_data_converter.rs  script_input_bindings.rs
crates/nuxie-schema/: Cargo.toml
crates/nuxie-schema/src/: lib.rs
crates/nuxie-schema/tests/: cpp_generated_headers.rs  generated_schema.rs
crates/nuxie-scripting/: Cargo.toml
crates/nuxie-scripting/src/: envelope.rs  gpu_canvas.rs  lib.rs  shader_asset.rs  vm.rs
crates/nuxie-scripting/src/vm/: bytecode.rs  mat4.rs  (+5 more)
crates/nuxie-scripting/tests/: corpus_scripts.rs  gpu_canvas_tools.rs  library_scope.rs  listener_invocations.rs  mat4_bindings.rs  nuxie_host_commands.rs  path_bindings.rs  renderer_bindings.rs  vm_boot.rs
crates/nuxie/src/: flow_session.rs  lib.rs  scene.rs  script_import.rs  scripted_listener_action_lifecycle_tests.rs
crates/nuxie/tests/: data_converter_authoring.rs  flow_session_contract.rs  imported_gpu_canvas.rs  public_api.rs  scene_authoring.rs  vector_scripted_drawable.rs  vm_hot_path_allocations.rs
crates/rive/: Cargo.toml
crates/rive-capi/: Cargo.toml
crates/rive-capi/include/: rive_capi.h
crates/rive-capi/smoke/: capi_smoke.c
crates/rive-capi/src/: lib.rs  render_callbacks.rs
crates/rive-capi/tests/: capi.rs
crates/rive-graph/: Cargo.toml
crates/rive-graph/src/: lib.rs
crates/rive-graph/tests/: cpp_probe.rs
crates/rive-renderer-ffi/: Cargo.toml  build.rs
crates/rive-renderer-ffi/cpp/: rive_renderer_ffi.cpp  rive_renderer_ffi.h  rive_renderer_ffi_metal.mm  rive_renderer_ffi_private.hpp
crates/rive-renderer-ffi/examples/: ffi_metal_draw.rs  ffi_null_draw.rs
crates/rive-renderer-ffi/src/: lib.rs  native.rs
crates/rive-runtime/: Cargo.toml  build.rs
crates/rive-runtime/src/: animation.rs  artboard.rs  artboard_data_bind.rs  components.rs  constraints.rs  data_bind_graph.rs  draw.rs  lib.rs  objects.rs  properties.rs  scripting.rs  state_machine.rs  text.rs  view_model.rs
crates/rive-runtime/tests/: cpp_probe.rs
crates/rive-scripting/: Cargo.toml
crates/rive-scripting/src/: envelope.rs  lib.rs  vm.rs
crates/rive-scripting/tests/: corpus_scripts.rs  renderer_bindings.rs  vm_boot.rs
crates/rive/src/: lib.rs
crates/rive/tests/: public_api.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_import.rs  fuzz_pointer.rs  fuzz_runtime.rs
fuzz/regressions/: README.md
fuzz/regressions/fuzz_pointer/: fuzz_pointer-hang-layout-control-parent-cycle.riv
fuzz/regressions/fuzz_runtime/: fuzz_runtime-hang-drawrules-refchain.riv  fuzz_runtime-hang-layout-parent-cycle-min.riv  fuzz_runtime-stackoverflow-nested-artboard-cycle.riv
fuzz/regressions/open/: fuzz_runtime-hang-layout-parent-cycle-orig.riv
fuzz/src/: lib.rs
tools/browser-renderer-smoke/: Cargo.toml  build.rs  build.sh  gpu-only.html  index.html  run-browser.cjs  run.sh  verify-wasm-imports.cjs
tools/browser-renderer-smoke/src/: lib.rs
tools/perf-compare/: Cargo.toml  renderer-scenes.toml
tools/perf-compare/src/: lib.rs  main.rs  renderer_counter.rs  renderer_perf.rs  renderer_perf_parity_gate.rs
tools/perf-compare/tests/: perf_counter_compare_cli.rs  r4_timing_gate.rs  renderer_perf_cli.rs
tools/renderer-replay/: Cargo.toml
tools/renderer-replay/src/: lib.rs  main.rs  perf_runner.rs
tools/rust-golden-runner/: Cargo.toml
tools/rust-golden-runner/src/: main.rs
(+2129 files in other folders)
