[workspace]
members = [
    "crates/rive-binary",
    "crates/rive-graph",
    "crates/rive-render-api",
    "crates/rive-renderer-ffi",
    "crates/rive",
    "crates/rive-capi",
    "crates/rive-runtime",
    "crates/rive-schema",
    "crates/rive-scripting",
    "tools/golden-compare",
    "tools/perf-compare",
    "tools/rive-codegen",
    "tools/rust-golden-runner",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rive-app/rive-rust"
