[workspace]
members = [
    "crates/rive-binary",
    "crates/rive-graph",
    "crates/rive-render-api",
    "crates/rive-renderer-ffi",
    "crates/rive",
    "crates/rive-capi",
    "crates/rive-runtime",
    "crates/rive-schema",
    "crates/rive-scripting",
    "tools/golden-compare",
    "tools/perf-compare",
    "tools/rive-codegen",
    "tools/rust-golden-runner",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rive-app/rive-rust"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

# Dedicated size-optimized profile for the SDK cdylib. Does NOT affect the
# `release` profile the perf gate depends on. Build with `--profile
# release-size` (see `make size-report` / docs/SIZE.md). Levers here are the
# cheap wins from docs/v2-status.md item 26(d): size-first codegen (opt-level
# "z"), aggressive symbol stripping, and fat LTO carried over from release.
# Override opt-level ad hoc with CARGO_PROFILE_RELEASE_SIZE_OPT_LEVEL=s|3.
[profile.release-size]
inherits = "release"
opt-level = "z"
strip = "symbols"
