[workspace]
members = [
    "crates/nuxie-binary",
    "crates/nuxie-graph",
    "crates/nuxie-render-api",
    "crates/nuxie-render-stream",
    "crates/nuxie-renderer",
    "crates/nuxie-renderer-ffi",
    "crates/nuxie",
    "crates/nux-capi",
    "crates/nuxie-runtime",
    "crates/nuxie-schema",
    "crates/nuxie-scripting",
    "tools/golden-compare",
    "tools/perf-compare",
    "tools/pixel-compare",
    "tools/renderer-fuzz-replay",
    "tools/renderer-replay",
    "tools/browser-renderer-smoke",
    "tools/nuxie-codegen",
    "tools/rust-golden-runner",
]
exclude = [
    "vendor/wgpu-30.0.0",
    "vendor/wgpu-core-30.0.0",
    "vendor/wgpu-core-deps-apple-30.0.0",
    "vendor/wgpu-core-deps-emscripten-30.0.0",
    "vendor/wgpu-core-deps-wasm-30.0.0",
    "vendor/wgpu-core-deps-windows-linux-android-30.0.0",
    "vendor/wgpu-hal-30.0.0",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/nuxieai/nuxie-runtime"

# Panic-freedom lint discipline for the runtime crates (v2-status item 20 #6).
# Opted into per-crate via `lints.workspace = true` by the SDK runtime crates
# only (nuxie-runtime, nuxie-binary, nuxie-graph, nuxie-schema, nuxie, nux-capi) --
# NOT the tools/ crates and NOT nuxie-scripting (active external work area).
# These are `[lints.clippy]` entries, so they fire only under `cargo clippy`
# (no cargo build/check noise). All three sit at WARN because the pre-existing
# site counts are far above one lane's fix budget (hundreds of indexing and
# arithmetic sites, ~170 unwraps; see `make lint-gate`); `make lint-gate`
# DENIES them per-crate wherever a crate is already clean (nuxie, nuxie-schema
# today) and reports the counts for the rest so the ratchet direction is
# visible. Escalate a lint to "deny" here once its last runtime-crate sites
# are cleared.
[workspace.lints.clippy]
unwrap_used = "warn"
indexing_slicing = "warn"
arithmetic_side_effects = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
# luaur implements Luau's protected-error/longjmp boundary with
# `panic_any`/`catch_unwind`. An aborting profile turns ordinary script errors
# (including errors caught by authored `pcall`) into process termination.
panic = "unwind"

# Dedicated size-optimized profile for the SDK cdylib. Does NOT affect the
# `release` profile the perf gate depends on. Build with `--profile
# release-size` (see `make size-report` / docs/SIZE.md). Levers here are the
# cheap wins from docs/v2-status.md item 26(d): size-first codegen (opt-level
# "z"), aggressive symbol stripping, and fat LTO carried over from release.
# Override opt-level ad hoc with CARGO_PROFILE_RELEASE_SIZE_OPT_LEVEL=s|3.
[profile.release-size]
inherits = "release"
opt-level = "z"
strip = "symbols"
