[package]
name = "nux-capi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nuxie = { path = "../nuxie", default-features = false }

# Opt into the workspace panic-freedom clippy lints (root Cargo.toml).
[lints]
workspace = true
