[package]
name = "nux-capi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
apple-renderer = ["nuxie/renderer"]
# Measurement-only consumer harness used by tools/size-report.sh. This keeps
# the public renderer call surface alive under fat LTO without changing normal
# SDK builds or exposing the harness through the shipped C header.
size-report-roots = ["apple-renderer"]

[dependencies]
nuxie = { path = "../nuxie", default-features = false }

[build-dependencies]
cbindgen = "=0.29.2"

# Opt into the workspace panic-freedom clippy lints (root Cargo.toml).
[lints]
workspace = true
