[package]
name = "nuxie-binary"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
nuxie-schema = { path = "../nuxie-schema" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"


# Opt into the workspace panic-freedom clippy lints (root Cargo.toml).
[lints]
workspace = true
