[package]
name = "nuxie-renderer"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[features]
default = []
decode-oracle = []
perf-diagnostics = []
perf-counters = []

[dependencies]
bytemuck = { version = "1.24", features = ["derive"] }
futures-channel = "0.3"
image-webp = "0.2.4"
jpeg-decoder = { version = "0.3", default-features = false }
moxcms = "0.8.1"
nuxie-render-api = { path = "../nuxie-render-api" }
png = "0.18"
smallvec = "1.15.2"
# Keep the parity-critical core/HAL patches transitive for git and path
# consumers. The vendored top-level package wires both patched crates by path.
wgpu = { version = "=30.0.0", path = "../../vendor/wgpu-30.0.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
femtovg = { version = "0.25.1", default-features = false }
imgref = "1.11"
rgb = "0.8.50"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "ImageData"] }

[dev-dependencies]
naga = { version = "30.0.0", features = ["wgsl-in"] }
nuxie-render-stream = { path = "../nuxie-render-stream" }
sha2 = "0.10"
