[package]
name = "nuxie-renderer"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[features]
default = []
decode-oracle = []
perf-diagnostics = []
perf-counters = []

[dependencies]
bytemuck = { version = "1.24", features = ["derive"] }
futures-channel = "0.3"
image-webp = "0.2.4"
jpeg-decoder = { version = "0.3", default-features = false }
moxcms = "0.8.1"
nuxie-image-codec = { path = "../nuxie-image-codec" }
nuxie-render-api = { path = "../nuxie-render-api" }
naga = { version = "30.0.0", features = ["glsl-in", "glsl-out", "wgsl-in", "wgsl-out"] }
png = "0.18"
smallvec = "1.15.2"
# Keep the parity-critical core/HAL patches transitive for git and path
# consumers. The vendored top-level package wires both patched crates by path.
wgpu = { version = "=30.0.0", path = "../../vendor/wgpu-30.0.0", features = ["glsl"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-metal = { version = "0.3.2", default-features = false, features = ["block2", "MTLCommandBuffer", "MTLCommandQueue", "MTLDevice", "MTLDrawable", "MTLPixelFormat", "MTLResource", "MTLTexture"] }
objc2-quartz-core = { version = "0.3.2", default-features = false, features = ["std", "CAMetalLayer", "objc2-core-foundation", "objc2-metal"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
femtovg = { version = "0.25.1", default-features = false }
imgref = "1.11"
js-sys = "0.3"
rgb = "0.8.50"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "ImageData", "WebGl2RenderingContext", "WebGlBuffer", "WebGlContextAttributes", "WebGlProgram", "WebGlShader", "WebGlTexture", "WebGlUniformLocation", "WebGlVertexArrayObject"] }

[dev-dependencies]
nuxie-render-stream = { path = "../nuxie-render-stream" }
sha2 = "0.10"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dev-dependencies]
objc2-core-foundation = { version = "0.3.2", default-features = false, features = ["CFCGTypes", "objc2"] }
