[package]
name = "nuxie-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
harfrust = "0.12"
nuxie-binary = { path = "../nuxie-binary" }
nuxie-graph = { path = "../nuxie-graph" }
nuxie-render-api = { path = "../nuxie-render-api" }
nuxie-schema = { path = "../nuxie-schema" }
skrifa = "0.44"
taffy = "0.12.1"

[build-dependencies]
nuxie-schema = { path = "../nuxie-schema" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Opt into the workspace panic-freedom clippy lints (root Cargo.toml).
[lints]
workspace = true
