[package]
name = "nuxie"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
scripting = ["dep:nuxie-scripting"]

[dependencies]
anyhow = "1"
nuxie-binary = { path = "../nuxie-binary" }
nuxie-graph = { path = "../nuxie-graph" }
nuxie-render-api = { path = "../nuxie-render-api" }
nuxie-runtime = { path = "../nuxie-runtime" }
nuxie-scripting = { path = "../nuxie-scripting", optional = true }

[build-dependencies]
nuxie-schema = { path = "../nuxie-schema" }

[dev-dependencies]
nuxie-render-stream = { path = "../nuxie-render-stream" }

# This crate is fully CLEAN on the workspace panic-freedom clippy lints (see
# [workspace.lints.clippy] in the root Cargo.toml), so it pins them at DENY
# here (a crate lints table cannot combine `workspace = true` with overrides).
# `make lint-gate` / CI enforce this on the library target.
[lints.clippy]
unwrap_used = "deny"
indexing_slicing = "deny"
arithmetic_side_effects = "deny"
