[package]
name = "nuxie"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = ["renderer"]
renderer = ["dep:nuxie-renderer"]
scripting = [
    "dep:ed25519-dalek",
    "dep:nuxie-scripting",
    "dep:serde",
    "dep:serde_json",
    "dep:sha2",
]

[dependencies]
anyhow = "1"
ed25519-dalek = { version = "2", default-features = false, features = ["std"], optional = true }
nuxie-binary = { path = "../nuxie-binary" }
nuxie-graph = { path = "../nuxie-graph" }
nuxie-render-api = { path = "../nuxie-render-api" }
nuxie-renderer = { path = "../nuxie-renderer", optional = true }
nuxie-runtime = { path = "../nuxie-runtime" }
nuxie-scripting = { path = "../nuxie-scripting", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }

[build-dependencies]
nuxie-schema = { path = "../nuxie-schema" }

[dev-dependencies]
luaur-common = "=0.1.8"
luaur-compiler = "=0.1.8"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
nuxie-render-stream = { path = "../nuxie-render-stream" }
nuxie-schema = { path = "../nuxie-schema" }
serde_json = "1"
sha2 = "0.10"

# This crate is fully CLEAN on the workspace panic-freedom clippy lints (see
# [workspace.lints.clippy] in the root Cargo.toml), so it pins them at DENY
# here (a crate lints table cannot combine `workspace = true` with overrides).
# `make lint-gate` / CI enforce this on the library target.
[lints.clippy]
unwrap_used = "deny"
indexing_slicing = "deny"
arithmetic_side_effects = "deny"
