[package]
name = "rive-graph"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
rive-binary = { path = "../rive-binary" }
rive-schema = { path = "../rive-schema" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"


# Opt into the workspace panic-freedom clippy lints (root Cargo.toml).
[lints]
workspace = true
