[package]
name = "rive-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
rive-binary = { path = "../rive-binary" }
rive-graph = { path = "../rive-graph" }
rive-render-api = { path = "../rive-render-api" }
rive-schema = { path = "../rive-schema" }

[build-dependencies]
rive-schema = { path = "../rive-schema" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
