[package]
name = "rive"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
scripting = ["dep:rive-scripting"]

[dependencies]
anyhow = "1"
rive-binary = { path = "../rive-binary" }
rive-graph = { path = "../rive-graph" }
rive-render-api = { path = "../rive-render-api" }
rive-runtime = { path = "../rive-runtime" }
rive-scripting = { path = "../rive-scripting", optional = true }

# This crate is fully CLEAN on the workspace panic-freedom clippy lints (see
# [workspace.lints.clippy] in the root Cargo.toml), so it pins them at DENY
# here (a crate lints table cannot combine `workspace = true` with overrides).
# `make lint-gate` / CI enforce this on the library target.
[lints.clippy]
unwrap_used = "deny"
indexing_slicing = "deny"
arithmetic_side_effects = "deny"
