[package]
name = "browser-renderer-smoke"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nuxie = { path = "../../crates/nuxie", features = ["scripting"] }
nuxie-render-stream = { path = "../../crates/nuxie-render-stream" }
pixel-compare = { path = "../pixel-compare" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }

[build-dependencies]
luaur-common = "=0.1.8"
luaur-compiler = "=0.1.8"
nuxie-schema = { path = "../../crates/nuxie-schema" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bytemuck = "1.24"
png = "0.18"
wasm-bindgen-futures = "0.4"
