[package]
name = "renderer-replay"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["rust-wgpu"]
rust-wgpu = ["dep:nuxie-renderer"]
ffi = ["dep:nuxie-renderer-ffi"]
perf-dawn = ["ffi", "nuxie-renderer-ffi/dawn"]
perf-diagnostics = ["rust-wgpu", "nuxie-renderer/perf-diagnostics"]
perf-counters = [
  "perf-dawn",
  "rust-wgpu",
  "nuxie-renderer/perf-counters",
  "nuxie-renderer-ffi/perf-counters",
]

[dependencies]
nuxie-render-stream = { path = "../../crates/nuxie-render-stream" }
nuxie-renderer = { path = "../../crates/nuxie-renderer", optional = true }
nuxie-renderer-ffi = { path = "../../crates/nuxie-renderer-ffi", features = ["native"], optional = true }
perf-compare = { path = "../perf-compare" }
pixel-compare = { path = "../pixel-compare" }
serde_json = "1"

[[bin]]
name = "renderer-perf-rust-runner"
path = "src/bin/renderer-perf-rust-runner.rs"
required-features = ["ffi", "rust-wgpu"]

[[bin]]
name = "renderer-perf-cpp-runner"
path = "src/bin/renderer-perf-cpp-runner.rs"
required-features = ["perf-dawn", "rust-wgpu"]
