[package]
name = "rust-golden-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
scripting = ["dep:nuxie-scripting"]
coverage-trace = []

[dependencies]
anyhow = "1"
nuxie-binary = { path = "../../crates/nuxie-binary" }
nuxie-graph = { path = "../../crates/nuxie-graph" }
nuxie-render-api = { path = "../../crates/nuxie-render-api" }
nuxie-runtime = { path = "../../crates/nuxie-runtime" }
nuxie-schema = { path = "../../crates/nuxie-schema" }
nuxie-scripting = { path = "../../crates/nuxie-scripting", optional = true }
